WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38904
Fix ScrollbarEfl build
https://bugs.webkit.org/show_bug.cgi?id=38904
Summary
Fix ScrollbarEfl build
Lucas De Marchi
Reported
2010-05-11 06:27:57 PDT
ScrollbarEfl.cpp can't be compiled with GCC 4.5. Use ScrollbarEfl instead of ScrollbarEfl::ScrollbarEfl. Attached patch fixes this.
Attachments
Fix ScrollbarEfl
(1.31 KB, patch)
2010-05-11 06:31 PDT
,
Lucas De Marchi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lucas De Marchi
Comment 1
2010-05-11 06:31:08 PDT
Created
attachment 55697
[details]
Fix ScrollbarEfl
Jeremy Orlow
Comment 2
2010-05-11 07:10:37 PDT
Comment on
attachment 55697
[details]
Fix ScrollbarEfl r=me WebCore/platform/efl/ScrollbarEfl.cpp:68 + ScrollbarEfl* that = static_cast<ScrollbarEfl*>(data); This is a poor name, but you didn't make it any worse and this is a build fix so....
WebKit Commit Bot
Comment 3
2010-05-12 02:12:50 PDT
Comment on
attachment 55697
[details]
Fix ScrollbarEfl Clearing flags on attachment: 55697 Committed
r59218
: <
http://trac.webkit.org/changeset/59218
>
WebKit Commit Bot
Comment 4
2010-05-12 02:12:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug