2010-05-12  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Jeremy Orlow.

        [EFL] It does not make sense to use ScrollbarEfl::ScrollbarEfl, so
        use ScrollbarEfl (GCC 4.5 seems to be pickier about this). Revision 59030
        fixed cases for RenderThemeEfl, but missed this for ScrollbarEfl.
        http://webkit.org/b/38904

        No new tests required.

        * platform/efl/ScrollbarEfl.cpp:
        (scrollbarEflEdjeMessage):

Canonical link: https://commits.webkit.org/50456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59218 268f45cc-cd09-0410-ab3c-d52691b4dbfc